--- a/calico_versioned_docs/version-3.24/reference/felix/configuration.mdx
+++ b/calico_versioned_docs/version-3.24/reference/felix/configuration.mdx
@@ -42,7 +42,7 @@ The full list of parameters which can be set is as follows.
 ### General configuration
 
 | Configuration file parameter        | Environment variable                      | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | Schema                                       |
-| ----------------------------------- | ----------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------- | --- | --- | ------------ | ---- | ---- | ---------- | ----- |
+| ----------------------------------- | ----------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------- | 
 | `DataplaneWatchdogTimeout`          | `FELIX_DATAPLANEWATCHDOGTIMEOUT`          | Timeout before the main dataplane goroutine is determined to have hung and Felix will report non-live and non-ready. Can be increased if the liveness check incorrectly fails (for example if Felix is running slowly on a heavily loaded system). [Default: `90`]                                                                                                                                                                                                                                                                                                                                                                                                                                                               | int                                          |
 | `AwsSrcDstCheck`                    | `FELIX_AWSSRCDSTCHECK`                    | Set the [source-destination-check](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_NAT_Instance.html#EIP_Disable_SrcDestCheck) when using AWS EC2 instances. Check [IAM role and profile configuration](../resources/felixconfig.mdx#aws-iam-rolepolicy-for-source-destination-check-configuration) for setting the necessary permission for this setting to work. [Default: `DoNothing`]                                                                                                                                                                                                                                                                                                                                   | `DoNothing`, `Disable`, `Enable`             |
 | `DatastoreType`                     | `FELIX_DATASTORETYPE`                     | The datastore that Felix should read endpoints and policy information from. [Default: `etcdv3`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | `etcdv3`, `kubernetes`                       |
@@ -96,7 +96,7 @@ The full list of parameters which can be set is as follows.
 | `TyphaK8sServiceName`               | `FELIX_TYPHAK8SSERVICENAME`               | Name of the Typha Kubernetes service                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | string                                       |
 | `Ipv6Support`                       | `FELIX_IPV6SUPPORT`                       | Enable {{prodname}} networking and security for IPv6 traffic as well as for IPv4.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | boolean                                      |
 | `RouteSource`                       | `FELIX_ROUTESOURCE`                       | Where Felix gets is routing information from for VXLAN and the BPF dataplane. The CalicoIPAM setting is more efficient because it supports route aggregation, but it only works when Calico's IPAM or host-local IPAM is in use. Use the WorkloadIPs setting if you are using Calico's VXLAN or BPF dataplane and not using Calico IPAM or host-local IPAM. [Default: "CalicoIPAM"]                                                                                                                                                                                                                                                                                                                                              | 'CalicoIPAM', or 'WorkloadIPs'               |
-| `mtuIfacePattern`                   | `FELIX_MTUIFACEPATTERN`                   | Pattern used to discover the host's interface for MTU auto-detection. [Default: `^((en                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | wl                                           | ww  | sl  | ib)[opsx].\* | (eth | wlan | wwan).\*)` | regex |
+| `mtuIfacePattern`                   | `FELIX_MTUIFACEPATTERN`                   | Pattern used to discover the host's interface for MTU auto-detection. [Default: ^((en&#124;wl&#124;ww&#124;sl&#124;ib)[opsx]&#46;&#42;&#124;(eth&#124;wlan&#124;wwan)&#46;&#42;) ]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | regex                                        | 
 | `FeatureDetectOverride`             | `FELIX_FEATUREDETECTOVERRIDE`             | Is used to override the feature detection. Values are specified in a comma separated list with no spaces, example; "SNATFullyRandom=true,MASQFullyRandom=false,RestoreSupportsLock=true,IPIPDeviceIsL3=true. "true" or "false" will force the feature, empty or omitted values are auto-detected. [Default: `""`]                                                                                                                                                                                                                                                                                                                                                                                                                | string                                       |
 
 ### etcd datastore configuration
@@ -154,11 +154,11 @@ eBPF dataplane mode uses the Linux Kernel's eBPF virtual machine to implement ne
 See the [HOWTO guide](../../operations/ebpf/enabling-ebpf.mdx) for step-by step instructions to enable this feature.
 
 | Configuration parameter / Environment variable                                      | Description                                                                                                                                                                                                                                                                                                                                                                       | Schema             | Default        |
-| ----------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------ | -------------- | ------ | ------ | ----------------- |
+| ----------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------ | -------------- | 
 | BPFEnabled / <br/> FELIX_BPFENABLED                                                 | Enable eBPF dataplane mode. eBPF mode has a number of limitations, see the [HOWTO guide](../../operations/ebpf/enabling-ebpf.mdx).                                                                                                                                                                                                                                                | true, false        | false          |
 | BPFDisableUnprivileged / <br/> FELIX_BPFDISABLEUNPRIVILEGED                         | If true, Felix sets the kernel.unprivileged_bpf_disabled sysctl to disable unprivileged use of BPF. This ensures that unprivileged users cannot access Calico's BPF maps and cannot insert their own BPF programs to interfere with the ones that {{prodname}} installs.                                                                                                          | true, false        | true           |
 | BPFLogLevel / <br/> FELIX_BPFLOGLEVEL                                               | The log level used by the BPF programs. The logs are emitted to the BPF trace pipe, accessible with the command `tc exec BPF debug`.                                                                                                                                                                                                                                              | Off,Info,Debug     | Off            |
-| BPFDataIfacePattern / <br/> FELIX_BPFDATAIFACEPATTERN                               | Controls which interfaces Felix should attach BPF programs to in order to catch traffic to/from the external network. This needs to match the interfaces that Calico workload traffic flows over as well as any interfaces that handle incoming traffic to NodePorts and services from outside the cluster. It should not match the workload interfaces (usually named cali...).. | regular expression | `^(en[opsx].\* | eth.\* | tunl0$ | wireguard.cali$)` |
+| BPFDataIfacePattern / <br/> FELIX_BPFDATAIFACEPATTERN                               | Controls which interfaces Felix should attach BPF programs to in order to catch traffic to/from the external network. This needs to match the interfaces that Calico workload traffic flows over as well as any interfaces that handle incoming traffic to NodePorts and services from outside the cluster. It should not match the workload interfaces (usually named cali...).. | regular expression | ^(en[opsx]&#46;&#42;&#124;eth&#46;&#42;&#124;tunl0$&#124;wireguard.cali$)
 | BPFConnectTimeLoadBalancingEnabled / <br/> FELIX_BPFCONNECTTIMELOADBALANCINGENABLED | Controls whether Felix installs the connect-time load balancer. In the current release, the connect-time load balancer is required for the host to reach kubernetes services.                                                                                                                                                                                                     | true,false         | true           |
 | BPFExternalServiceMode / <br/> FELIX_BPFEXTERNALSERVICEMODE                         | Controls how traffic from outside the cluster to NodePorts and ClusterIPs is handled. In Tunnel mode, packet is tunneled from the ingress host to the host with the backing pod and back again. In DSR mode, traffic is tunneled to the host with the backing pod and then returned directly; this requires a network that allows direct return.                                  | Tunnel,DSR         | Tunnel         |
 | BPFExtToServiceConnmark / <br/> FELIX_BPFEXTTOSERVICECONNMARK                       | Controls a 32bit mark that is set on connections from an external client to a local service. This mark allows us to control how packets of that connection are routed within the host and how is routing interpreted by RPF check.                                                                                                                                                | int                | 0              |
