--- a/calico-enterprise_versioned_docs/version-3.16/networking/egress/external-network.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/networking/egress/external-network.mdx
@@ -164,7 +164,7 @@ EOF
 ```
 
 Where:
-- Where externalNetworks associates this egress gateway deployments with external network `red`. All traffic leaving the egress gateway to an external destination will be routed to the destination on external network `red`.
+- Where `externalNetworks` associates this egress gateway deployments with external network `red`. All traffic leaving the egress gateway to an external destination will be routed to the destination on external network `red`.
 - Node selector `egress: true` forces egress gateway pods of the deployment to be scheduled on egress nodes.
 
 :::note
