--- a/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/install.mdx
@@ -338,7 +338,7 @@ For example:
 
 ```yaml
  This section includes base Calico Enterprise installation configuration.
- For more information, see: https://docs.tigera.io/calico-enterprise/latest/reference/installation/api/#operator.tigera.io/v1
+ For more information, see: https://docs.tigera.io/calico-enterprise/3.14/reference/installation/api/#operator.tigera.io/v1
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
