--- a/calico_versioned_docs/version-3.25/operations/ebpf/install.mdx
+++ b/calico_versioned_docs/version-3.25/operations/ebpf/install.mdx
@@ -302,7 +302,7 @@ For example:
 
 ```yaml
  This section includes base Calico Enterprise installation configuration.
- For more information, see: https://docs.tigera.io/calico-enterprise/latest/reference/installation/api/#operator.tigera.io/v1
+ For more information, see: https://docs.tigera.io/calico/3.25/reference/installation/api/#operator.tigera.io/v1
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
