Address dead links

--- a/calico_versioned_docs/version-3.24/network-policy/istio/enforce-policy-istio.mdx
+++ b/calico_versioned_docs/version-3.24/network-policy/istio/enforce-policy-istio.mdx
@@ -128,7 +128,7 @@ for what we actually want to be confident of: that the party on the other end
 really is the authorized workload we want to communicate with. Keeping the
 private key a secret is vital to this confidence, and occasionally attackers
 can find ways to trick applications into giving up secrets they should not.
-For example, the [Heartbleed](http://heartbleed.com) vulnerability in OpenSSL allowed attackers to
+For example, the [Heartbleed](https://owasp.org/www-community/vulnerabilities/Heartbleed_Bug) vulnerability in OpenSSL allowed attackers to
 trick an affected application into reading out portions of its memory,
 compromising private keys.
 
@@ -144,7 +144,7 @@ calicoctl create -f 30-policy.yaml
 :::note
 
 You can also
-[view the manifest in your browser](files/30-policy.yaml).
+[view the manifest in your browser](/files/30-policy.yaml).
 
 :::
 
