--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -2,17 +2,17 @@
 description: Enable continuous policy recommendations to secure unprotected namespaces or workloads.
 ---
 
-# Use policy recommendations to automatically isolate namespaces with network policy.
+# Enable policy recommendations
 
 ## Big picture
 
-Enable continuous policy recommendations.
+Use policy recommendations to automatically isolate namespaces with network policy.
 
 ## Value
 
 One of the best practices for improving the security posture of your Kubernetes cluster is to implement namespace isolation with network policy. Namespace isolation helps to implement a zero-trust and least-privileged security model, where only required communication between namespaces are authorized and everything else is blocked. This helps mitigate the risk of lateral movement within a cluster in the event of an attack.
 
-{{prodname}} makes it easy for platform operators to implement namespace isolation without experience in authoring network policy or detailed knowledge of how application workloads are communicating. {{prodname}} analyzes the flow logs generated from workloads and automatically recommends and stages policies for each namespace that can be used for isolation.
+{{prodname}} makes it easy for platform operators to implement namespace isolation without experience in authoring network policy or detailed knowledge of how application workloads are communicating. {{prodname}} analyzes the flow logs that are generated from workloads, and automatically recommends and stages policies for each namespace that can be used for isolation.
 
 ## Before you begin
 
@@ -105,7 +105,7 @@ Global settings for namespaces are found on the Policy Recommendations board, **
 
 ![Global settings dialog](/img/calico-enterprise/global-settings.png)
 
-:::Recommendation
+:::tip
 For application workloads with less frequent communication, the sampling for flow logs may not be long enough, so you’ll want to increase one or both settings. We recommend that you review your workloads immediately after you enable policy recommendations and adjust the settings accordingly. 
 :::
 
