--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -95,7 +95,7 @@ Delete or rename the policy so a new staged network policy is recreated on the P
 #### Stop policy recommendations updates for a namespace
 
 1. On the Policies Recommendations board, click the **Active** tab, which lists the active staged network policies.
-1. Select the namespace, click the **Actions** menu, and click **Dismiss policy**
+1. Select the namespace, click the **Actions** menu, and click **Dismiss policy**.
 
 ### Review runtime settings for workloads 
 
