--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -50,6 +50,7 @@ Nodes require amd64 (x86_64) architecture CPUs and one of the following distribu
 - Fedora 29, 30, 31, 32, 33 or 34
 - Amazon Linux 2
 - Debian Stretch or later
+- Any other distribution with a Linux kernel 5.0 or later that provides BPF Type Format (BTF) for that kernel at the standard place (/sys/kernel/btf/vmlinux)
 
 :::note
 
