--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -4,7 +4,7 @@ description: Learn how to apply ALP to your workloads and control ingress traffi
 
 # Enforce application layer policies on your apps (tutorial)
 
-This tutorial demonstrates how to use {{prodname}} application layer policy to mitigate some common threats in a sample banking application.
+This tutorial shows how to use {{prodname}} application layer policy to restrict ingress traffic for applications and microservices.
 Assume that the application is installed in your {{prodname}} cluster and that the following application pods are running. 
 
 ```
