--- a/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -30,7 +30,7 @@ Notice that from here, we get direct access to the backend database. For example
 (Piping to `python -m json.tool` nicely formats the output.)
 
 
-## Applying a network policy
+## Apply application layer policy
 
 With a {{prodname}} policy, you can mitigate risks to the banking application.
 
